Set color of mute buttons to ensure that it is always visible.

--- a/mopidy_musicbox_webclient/static/css/webclient.css
+++ b/mopidy_musicbox_webclient/static/css/webclient.css
@@ -174,6 +174,7 @@
  *  Volume Slider
  ***********************/
 #mutebt {
+    color: white;
     float: left;
     margin-left: 8px;
     margin-top: 8px;
